--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "mongodb": "^7.1.0",
     "mongoose": "^9.1.5",
     "nodemon": "^3.1.11",
     "socket.io": "^4.8.3"
   },
   "description": ""
 }
+  "scripts": {
+    "start": "node server.js",
+    "test": "node test-db.js"
+  }
