--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,14 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "MERN CI/CD Demo Backend",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "test": "node test-db.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
+  "keywords": ["mern", "cicd", "demo"],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,10 +21,5 @@
     "mongoose": "^9.1.5",
     "nodemon": "^3.1.11",
     "socket.io": "^4.8.3"
-  },
-  "description": ""
-}
-  "scripts": {
-    "start": "node server.js",
-    "test": "node test-db.js"
   }
+}
